--- a/DrugRegimen/static/admin/css/pagecontent.css
+++ b/DrugRegimen/static/admin/css/pagecontent.css
@@ -18,7 +18,8 @@ input[type=submit]:hover {
     margin-top:30px;
   }
 
-#pagecontent {
+#pagecontent { /* In HTML files this should include everything between the subnav and the footer */
+    padding-left: 4%;
     padding-bottom: 80px;
     /* Footer height + 8px */
 }
