--- a/DrugRegimen/static/admin/css/pagecontent.css
+++ b/DrugRegimen/static/admin/css/pagecontent.css
@@ -13,13 +13,18 @@ input[type=submit]:hover {
     margin-left: 10%;
     margin-right: 70%;
     color: dimgrey;
-    border-bottom: 3px solid dimgrey;
-    margin-bottom:40px;
+    border-bottom: 3px solid rgb(105, 105, 105);
+    margin-bottom: 35px;
   }
 
 #pagecontent { /* In HTML files this should include everything between the subnav and the footer */
-    padding-left: 2.5%;
-    padding-bottom: 25%;
+    margin-left: 1.5%;
+    margin-right: 0.75%;
+    padding-left: 1.5%;
+    padding-top: 1.5%;
+    padding-bottom: 10%;
+    background-color: #D5E6E3;
+    outline: 1px solid #006857;
     /* Footer height + 8px */
 }
 
