--- a/DrugRegimen/static/admin/css/navbaretc.css
+++ b/DrugRegimen/static/admin/css/navbaretc.css
@@ -65,6 +65,17 @@ body {
     text-align: center;
 }
 
+.spacer5 {
+}
+.spacer5 > div {
+    display: inline-block;
+    display: -moz-inline-box;
+    *display: inline; /* For IE7 */
+    zoom: 1; /* Trigger hasLayout */
+    width: 19%;
+    text-align: center;
+}
+
 .footer {
     position: absolute;
     left: 0;
