--- a/DrugRegimen/static/admin/css/navbaretc.css
+++ b/DrugRegimen/static/admin/css/navbaretc.css
@@ -65,6 +65,19 @@ body {
     text-align: center;
 }
 
+.spacer4 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.spacer4 > div {
+    display: inline-block;
+    display: -moz-inline-box;
+    *display: inline; /* For IE7 */
+    zoom: 1; /* Trigger hasLayout */
+    width: 24%;
+    text-align: center;
+}
+
 .spacer5 {
 }
 .spacer5 > div {
